--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500&display=swap");
 
 * {
   padding: 0px;
@@ -23,6 +24,7 @@ a:hover {
   --text-dark: #000000;
   --text-light-dark: #212529;
 
+  --mont: "Montserrat", sans-serif;
   --poppins: "Poppins", sans-serif;
   --nato: "Noto Sans", sans-serif;
 
