--- a/src/components/PostCode/index.css
+++ b/src/components/PostCode/index.css
@@ -1,5 +1,5 @@
-.post-code-container {
-  background-color: rgba(0, 0, 0, 0.4);
+.admin-container {
+  background-color: var(--color-greyish);
   backdrop-filter: blur(2px);
   position: absolute;
   top: 0;
@@ -12,26 +12,19 @@
   z-index: 5;
 }
 
-.post-code-card {
-  width: 85%;
-  height: 90%;
-  background-color: var(--text-white);
+.admin-card {
+  width: 95%;
+  height: 95%;
+  background-color: var(--bg-white);
+  transition: background-color 0.4s;
   border-radius: 6px;
   padding: 30px 10px;
-  /* box-shadow: inset 0px 0px 3px #252525; */
   display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
-.pc-vr-line {
-  width: 1px;
-  height: 100%;
-  margin: 0px 15px;
-}
-
-.pc-code-output-container,
-.pc-form-container {
-  flex-grow: 2;
-  padding: 0px 20px;
+.post-code-container {
   overflow-y: auto;
 }
 
@@ -45,19 +38,17 @@
 .pc-form-input {
   font-size: 14px;
   font-weight: 400;
+  background-color: var(--light-white);
+  color: var(--text-dark);
 }
 
-@media (max-width: 768px) {
-  .post-code-container {
-    padding: 20px 0px;
-  }
-  .post-code-card {
-    width: 90%;
-    flex-direction: column;
-    overflow-y: auto;
-  }
-  .pc-code-output-container,
-  .pc-form-container {
-    overflow-y: visible;
-  }
+.pc-form-input:focus {
+  background-color: var(--light-white) !important;
+  color: var(--text-dark);
+}
+
+.submit-btn,
+.submit-btn:hover {
+  background-color: var(--bg-dark);
+  color: var(--text-white);
 }
