--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -6,13 +6,16 @@
   padding-top: 60px;
 }
 
-.explore-btn {
+.explore-btn,
+.explore-btn:hover {
   width: 110px;
   height: 36;
   font-size: 13px;
   border: none;
   letter-spacing: 1px;
   border-radius: 4px;
+  background-color: var(--bg-dark);
+  color: var(--text-white);
 }
 
 .avail-list-container {
@@ -25,7 +28,7 @@
 
 .avail-list-item {
   list-style: none;
-  border: 1px solid #252525;
+  border: 1px solid var(--light-dark);
   border-radius: 25px;
   text-align: center;
   margin: 5px;
