--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,6 @@
   box-sizing: border-box;
 }
 
-/* a {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-} */
-
 :root {
   --main-color: #ef233c;
 
@@ -39,6 +31,22 @@ a:hover {
   --fsize-14: 14px;
   --fsize-13: 13px;
   --fsize-12: 12px;
+}
+
+.dark-mode {
+  --bg-dark: #ffffff;
+  --bg-white: #212529;
+  --text-dark: #ffffff;
+  --text-white: #000000;
+  --text-light-dark: #212529;
+
+  --mont: "Montserrat", sans-serif;
+  --poppins: "Poppins", sans-serif;
+  --nato: "Noto Sans", sans-serif;
+
+  --light-dark: rgba(255, 255, 255, 0.1);
+  --color-greyish: rgba(255, 255, 255, 0.4);
+  --light-white: #343a40;
 }
 
 .heading {
