--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
   --mont: "Montserrat", sans-serif;
   --poppins: "Poppins", sans-serif;
   --nato: "Noto Sans", sans-serif;
+  --nato: "Montserrat", sans-serif;
 
   --light-dark: rgba(0, 0, 0, 0.1);
   --color-greyish: rgba(0, 0, 0, 0.3);
@@ -56,7 +57,7 @@
 
 .para {
   font-family: var(--nato);
-  font-size: 14px;
+  font-size: var(--fsize-14);
   font-weight: 400;
 }
 
@@ -68,4 +69,10 @@
 
 .hr-line {
   margin: 30px 0px;
+}
+
+@media (max-width: 768px) {
+  :root {
+    --fsize-14: 13px;
+  }
 }
